--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     }
   ],
   "require": {
-    "php": "^7.2",
+    "php": "^7.2|^8.1|^8.2",
     "ext-bcmath": "*",
     "ext-mbstring": "*"
   },
